@startuml

'Import skinparams'
!include .\Skinparams.puml

title ClusterEmulator.Emulation.Processors Class Diagram

namespace ClusterEmulator.Emulation.Core {
    interface IConfigModel<TModel> {
        + AsTypeModel(logger) : TModel
    }
}

namespace ClusterEmulator.Emulation.Processors {
    interface IProcessor<extends IConfigModel<IProcessor>> extends ClusterEmulator.Emulation.Core.IConfigModel {
        + Steps : IList<string>
    }

    interface IRequestProcessor extends IProcessor {

        + ErrorPayload : ErrorResponse
        + ErrorPayloadSize : integer
        + IngressLatencyMilliseconds : integer
        + SuccessPayload : SuccessResponse
        + SuccessPayloadSize : integer
    }

    interface IStartupProcessor extends IProcessor {
        + Asynchronous : boolean
    }

    abstract Processor implements IProcessor {
        # Log : ILogger
    }

    class RequestProcessor extends Processor implements IRequestProcessor

    class StartupProcessor extends Processor implements IStartupProcessor
}

namespace ClusterEmulator.Models {
    class ErrorResponse {
        + Error : string
        + ErrorResponse(message)
    }

    class SuccessResponse {
        + Result : IEnumerable<string>
        + SuccessResponse(length)
    }
}

ClusterEmulator.Emulation.Processors.RequestProcessor *--> ClusterEmulator.Models.ErrorResponse
ClusterEmulator.Emulation.Processors.RequestProcessor *--> ClusterEmulator.Models.SuccessResponse

@enduml